Initial symantec html layout

--- a/dev/index.html
+++ b/dev/index.html
@@ -15,7 +15,18 @@
 </head>
 <body>
 <!-- Put your HTML code here... -->
-<h1>Replace Me with Your HTML Code...</h1>
+<header>
+
+</header>
+<main>
+	<h1>Replace Me with Your HTML Code...</h1>
+</main>
+<aside>
+
+</aside>
+<footer>
+	
+</footer>
 
 
 
