--- a/dev/index.html
+++ b/dev/index.html
@@ -16,16 +16,96 @@
 <body>
 <!-- Put your HTML code here... -->
 <header>
-
+<img src="images/logo.png" alt="">
+<!-- social media icons -->
+<nav>
+	<ul>
+		<li>Home</li>
+		<li>About</li>
+		<li>Reviews</li>
+		<li>Recipes</li>
+		<li>Contact</li>
+	</ul>
+</nav>
+<!-- Search bar -->
 </header>
 <main>
-	<h1>Replace Me with Your HTML Code...</h1>
+	<!-- <h1>Replace Me with Your HTML Code...</h1> -->
+	<!-- main grid -->
+	<img src="images/mussel.jpg" alt="">
+	<h3>LOREM IPSUM DOLOR SIT </h3>
+	<img src="images/salad.jpg" alt="">
+	<h3>LOREM IPSUM DOLOR SIT </h3>
+	<img src="images/pancake.jpg" alt="">
+	<h3>SIT AMET CONSECTETUR </h3>
+
+	<article>
+		<h2>LOREM IPSUM DOLOR SIT AMET</h2>
+		<p>Posted by Mike Lee on Sunday, Augujst 25, 2013</p>
+		<img src="images/pasta.jpg" alt="">
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+		<button>
+			<p>read more...</p>
+		</button>
+	</article>
+
+	<article>
+		<h2>VEL, EAQUE QUISQUAM SIT AMET</h2>
+		<p>Posted by Mike Lee on Sunday, Augujst 25, 2013</p>
+		<img src="images/ramen.jpg" alt="">
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+		<button>
+			<p>read more...</p>
+		</button>
+	</article>
+
+	<article>
+		<img src="images/previous-btn.png" alt="testing">
+	</article>
+
+	<aside>
+		<div>
+			<h3>LATEST RECIPES</h3>
+			<img src="images/lamb-tb.jpg" alt="">
+			<p>MET CONSEC TETUR ELIT</p>
+			<img src="images/breakfast-tb.jpg" alt="">
+			<p>ARCHI TECTO DOLORES</p>
+			<img src="images/calamari-tb.jpg" alt="">
+			<p>MEXPE DITA CIATIS</p>
+			<img src="images/steak-tb.jpg" alt="">
+			<p>FUGIAT EAQUE AORE</p>
+
+		</div>
+		<div>
+			<h3>CUISINES</h3>
+			<ul>
+				<li>American (95)</li>
+				<li>Cambodian (3)</li>
+				<li>Filipino (8)</li>
+				<li>German (7)</li>
+				<li>Indian (44)</li>
+				<li>Jamaican (7)</li>
+				<li>Korean (120)</li>
+				<li>Mediterranean (9)</li>
+				<li>Southern (14)</li>
+				<li>Asian (33)</li>
+				<li>Chinese (281)</li>
+				<li>French (40)</li>
+				<li>Greek (29)</li>
+				<li>Italian (60)</li>
+				<li>Japanese (202)</li>
+				<li>Malaysian (12)</li>
+				<li>Mexican (25)</li>
+			</ul>
+		</div>
+	</aside>
+
 </main>
 <aside>
 
 </aside>
 <footer>
-	
+	<p>&COPY; 2022 Adam & Sami. For non-educational purposes only. Image credits to someone else.</p>
 </footer>
 
 
