Added picture element and div around grid section

--- a/dev/index.html
+++ b/dev/index.html
@@ -16,28 +16,34 @@
 <body>
 <!-- Put your HTML code here... -->
 <header>
-<img src="images/logo.png" alt="">
-<!-- social media icons -->
-<nav>
-	<ul>
-		<li>Home</li>
-		<li>About</li>
-		<li>Reviews</li>
-		<li>Recipes</li>
-		<li>Contact</li>
-	</ul>
-</nav>
-<!-- Search bar -->
-</header>
+	<!-- social media icons -->
+	<nav>
+		<picture>
+			<source media="(min-width: 330px)" srcset="images/logo.png">
+			<img src="images/small-logo.jpg"/>
+		</picture>
+		<ul>
+			<li>Home</li>
+			<li>About</li>
+			<li>Reviews</li>
+			<li>Recipes</li>
+			<li>Contact</li>
+		</ul>
+	</nav>
+	<!-- Search bar -->
+	</header>
+
 <main>
 	<!-- <h1>Replace Me with Your HTML Code...</h1> -->
 	<!-- main grid -->
-	<img src="images/mussel.jpg" alt="">
-	<h3>LOREM IPSUM DOLOR SIT </h3>
-	<img src="images/salad.jpg" alt="">
-	<h3>LOREM IPSUM DOLOR SIT </h3>
-	<img src="images/pancake.jpg" alt="">
-	<h3>SIT AMET CONSECTETUR </h3>
+	<div class="grid-section">
+		<img src="images/mussel.jpg" alt="">
+		<h3>LOREM IPSUM DOLOR SIT </h3>
+		<img src="images/salad.jpg" alt="">
+		<h3>LOREM IPSUM DOLOR SIT </h3>
+		<img src="images/pancake.jpg" alt="">
+		<h3>SIT AMET CONSECTETUR </h3>
+	</div>
 
 	<article>
 		<h2>LOREM IPSUM DOLOR SIT AMET</h2>
