added font links and, added bg in css

--- a/dev/index.html
+++ b/dev/index.html
@@ -7,6 +7,9 @@
 
 	<!-- *** IMPORTANT *** PUT LINKS TO GOOGLE FONTS HERE -->
 	<!-- Put Google Fonts Here -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Roboto:wght@300&display=swap" rel="stylesheet">
 
 	<!-- end Google Fonts -->
 
@@ -107,9 +110,6 @@
 	</aside>
 
 </main>
-<aside>
-
-</aside>
 <footer>
 	<p>&COPY; 2022 Adam & Sami. For non-educational purposes only. Image credits to someone else.</p>
 </footer>
