added divs around grid elements

--- a/dev/index.html
+++ b/dev/index.html
@@ -40,12 +40,18 @@
 	<!-- <h1>Replace Me with Your HTML Code...</h1> -->
 	<!-- main grid -->
 	<div class="grid-section">
-		<img src="images/mussel.jpg" alt="">
-		<h3>LOREM IPSUM DOLOR SIT </h3>
-		<img src="images/salad.jpg" alt="">
-		<h3>LOREM IPSUM DOLOR SIT </h3>
-		<img src="images/pancake.jpg" alt="">
-		<h3>SIT AMET CONSECTETUR </h3>
+		<div class="image">
+			<img src="images/mussel.jpg" alt="">
+			<h3>LOREM IPSUM DOLOR SIT </h3>
+		</div >
+		<div class="image">
+			<img src="images/salad.jpg" alt="">
+			<h3>LOREM IPSUM DOLOR SIT </h3>
+		</div>
+		<div class="image">
+			<img src="images/pancake.jpg" alt="">
+			<h3>SIT AMET CONSECTETUR </h3>
+		</div>
 	</div>
 
 	<article>
