added mobile menu icon to index, styles to scss

--- a/dev/index.html
+++ b/dev/index.html
@@ -18,20 +18,26 @@
 </head>
 <body>
 <!-- Put your HTML code here... -->
-<header>
+<header class="site-header">
 	<!-- social media icons -->
-	<nav>
+	<nav class="site-navigation" id="site-navigation">
+		<div class="nav-bar">
 		<picture>
 			<source media="(min-width: 330px)" srcset="images/logo.png">
 			<img src="images/small-logo.jpg"/>
 		</picture>
-		<ul>
+
+		<img src="images/menu.png" alt="">
+		</div>
+		
+		<ul class="nav-menu" id="header-menu">
 			<li>Home</li>
 			<li>About</li>
 			<li>Reviews</li>
 			<li>Recipes</li>
 			<li>Contact</li>
 		</ul>
+
 	</nav>
 	<!-- Search bar -->
 	</header>
