Worked on responsive logo in Nav bar

--- a/dev/index.html
+++ b/dev/index.html
@@ -22,12 +22,13 @@
 	<!-- social media icons -->
 	<nav class="site-navigation" id="site-navigation">
 		<div class="nav-bar">
-		<picture>
+		<picture class="logo">
 			<source media="(min-width: 330px)" srcset="images/logo.png">
 			<img src="images/small-logo.jpg"/>
 		</picture>
 
-		<img src="images/menu.png" alt="">
+		<img id="button" src="images/menu.png" alt="">
+
 		</div>
 		
 		<ul class="nav-menu" id="header-menu">
