--- a/dev/index.html
+++ b/dev/index.html
@@ -47,15 +47,15 @@
 	<!-- <h1>Replace Me with Your HTML Code...</h1> -->
 	<!-- main grid -->
 	<div class="grid-section">
-		<div class="image">
+		<div class="image1" id="image">
 			<img src="images/mussel.jpg" alt="">
 			<h3>LOREM IPSUM DOLOR SIT </h3>
 		</div >
-		<div class="image">
+		<div class="image2" id="image">
 			<img src="images/salad.jpg" alt="">
 			<h3>LOREM IPSUM DOLOR SIT </h3>
 		</div>
-		<div class="image">
+		<div class="image3" id="image">
 			<img src="images/pancake.jpg" alt="">
 			<h3>SIT AMET CONSECTETUR </h3>
 		</div>
