Nav Menu Button actions

--- a/dev/index.html
+++ b/dev/index.html
@@ -12,20 +12,28 @@
 	<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Roboto:wght@300&display=swap" rel="stylesheet">
 
 	<!-- end Google Fonts -->
-
+	<script src="https://kit.fontawesome.com/6ea718c346.js" crossorigin="anonymous"></script>
 	<!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
 	<link rel="stylesheet" href="styles/styles.css?cachebuster=1">
 </head>
 <body>
 <!-- Put your HTML code here... -->
+<div class="page-wrapper">
 <header class="site-header">
 	<!-- social media icons -->
 	<nav class="site-navigation" id="site-navigation">
+		
 		<div class="nav-bar">
 		<picture class="logo">
 			<source media="(min-width: 330px)" srcset="images/logo.png">
 			<img src="images/small-logo.jpg"/>
 		</picture>
+		
+		<div class="icons">
+			<i class="fa-brands fa-facebook-f"></i>
+			<i class="fa-brands fa-google"></i>
+			<i class="fa-brands fa-twitter"></i>
+		</div>
 
 		<img id="button" src="images/menu.png" alt="">
 
@@ -126,6 +134,7 @@
 <footer>
 	<p>&COPY; 2022 Adam & Sami. For non-educational purposes only. Image credits to someone else.</p>
 </footer>
+</div>
 
 
 
