Edited HTML, fixed up articles on mobile

--- a/dev/index.html
+++ b/dev/index.html
@@ -71,21 +71,21 @@
 
 	<article>
 		<h2>LOREM IPSUM DOLOR SIT AMET</h2>
-		<p>Posted by Mike Lee on Sunday, Augujst 25, 2013</p>
+		<p class="credit">Posted by Mike Lee on Sunday, Augujst 25, 2013</p>
 		<img src="images/pasta.jpg" alt="">
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 		<button>
-			<p>read more...</p>
+			<p class="btn-p">READ MORE...</p>
 		</button>
 	</article>
 
 	<article>
 		<h2>VEL, EAQUE QUISQUAM SIT AMET</h2>
-		<p>Posted by Mike Lee on Sunday, Augujst 25, 2013</p>
+		<p class="credit">Posted by Mike Lee on Sunday, Augujst 25, 2013</p>
 		<img src="images/ramen.jpg" alt="">
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 		<button>
-			<p>read more...</p>
+			<p class="btn-p">READ MORE...</p>
 		</button>
 	</article>
 
