Finished mobile nav (up to 499px)

--- a/dev/index.html
+++ b/dev/index.html
@@ -35,27 +35,59 @@
 		</div>
 		
 		<ul class="nav-menu" id="mobile-header-menu">
+			<input type="text" placeholder="Search..">
 			<li>Home</li>
 			<li>About</li>
 			<li>Reviews</li>
 			<li>Recipes</li>
 			<li>Contact</li>
+			
 			<div class="icons">
+				<a href="#">
+				<span>	
 				<i class="fa-brands fa-facebook-f"></i>
-				<i class="fa-brands fa-facebook-f"></i>
-				<i class="fa-brands fa-google"></i>
-				<i class="fa-brands fa-twitter"></i>
+				</span>
+				<span>
+				<i class="fa-brands fa-facebook-f hover"></i>
+				</span>
+				</a>
+				<a href="#">
+				<span>
+					<i class="fa-brands fa-google"></i>
+				</span>
+				<span>
+					<i class="fa-brands fa-google hover"></i>
+				</span>
+				</a>
+				<a href="#">
+					<span>
+						<i class="fa-brands fa-twitter"></i>
+					</span>
+					<span>
+						<i class="fa-brands fa-twitter hover"></i>
+					</span>
+					</a>
 			</div>
+			
 		</ul>
 		</div>
+
+
+
+
+
+
 <!-- desktop menu -->
 		<div class="desktop-site-navigation" id="desktop-site-navigation">
+			<div class="desktop-nav-bar">
 			<picture class="logo">
 				<source media="(min-width: 330px)" srcset="images/logo.png">
 				<img src="images/logo.jpg"/>
 			</picture>
+			</div>
 			<input type="text" placeholder="Search..">
-			<ul class="nav-menu" id="mobile-header-menu">
+
+			<ul class="nav-menu" id="desktop-header-menu">
 				<li>Home</li>
 				<li>About</li>
 				<li>Reviews</li>
@@ -63,6 +95,7 @@
 				<li>Contact</li>
 
 			</ul>
+
 
 
 		</div>
