--- a/dev/index.html
+++ b/dev/index.html
@@ -86,7 +86,7 @@
 			</picture>
 			</div>
 			<input type="text" placeholder="Search..">
-
+			<div class="bg-colour">
 			<ul class="nav-menu" id="desktop-header-menu">
 				<li>Home</li>
 				<li>About</li>
@@ -95,7 +95,7 @@
 				<li>Contact</li>
 
 			</ul>
-
+		</div>
 
 
 		</div>
