--- a/dev/index.html
+++ b/dev/index.html
@@ -55,18 +55,22 @@
 	<!-- <h1>Replace Me with Your HTML Code...</h1> -->
 	<!-- main grid -->
 	<div class="grid-section">
-		<div class="image1" id="image">
-			<img src="images/mussel.jpg" alt="">
-			<h3>LOREM IPSUM DOLOR SIT </h3>
-		</div >
-		<div class="image2" id="image">
+		<figure class="image1" id="image">
+			<img alt="mussels"
+				 src="images/mussel.jpg"
+				 srcset="images/mussel.jpg 704w,
+				 		 images/mussel-small.jpg 350w"
+				 sizes="(max-width: 350px) 350px, (max-width: 1050px) calc(100vw - 60px), 1050px">
+			<figcaption>LOREM IPSUM DOLOR SIT </figcaption>
+		</figure >
+		<figure class="image2" id="image">
 			<img src="images/salad.jpg" alt="">
-			<h3>LOREM IPSUM DOLOR SIT </h3>
-		</div>
-		<div class="image3" id="image">
+			<figcaption>LOREM IPSUM DOLOR SIT </figcaption>
+		</figure>
+		<figure class="image3" id="image">
 			<img src="images/pancake.jpg" alt="">
-			<h3>SIT AMET CONSECTETUR </h3>
-		</div>
+			<figcaption>SIT AMET CONSECTETUR </figcaption>
+		</figure>
 	</div>
 
 	<article>
