edited html again, fixed up articles on mobile

--- a/dev/index.html
+++ b/dev/index.html
@@ -73,7 +73,7 @@
 		</figure>
 	</div>
 
-	<article>
+	<article class="articles">
 		<h2>LOREM IPSUM DOLOR SIT AMET</h2>
 		<p class="credit">Posted by Mike Lee on Sunday, Augujst 25, 2013</p>
 		<img src="images/pasta.jpg" alt="">
@@ -83,7 +83,7 @@
 		</button>
 	</article>
 
-	<article>
+	<article class="articles">
 		<h2>VEL, EAQUE QUISQUAM SIT AMET</h2>
 		<p class="credit">Posted by Mike Lee on Sunday, Augujst 25, 2013</p>
 		<img src="images/ramen.jpg" alt="">
@@ -93,7 +93,7 @@
 		</button>
 	</article>
 
-	<article>
+	<article class="older-btn">
 		<img src="images/previous-btn.png" alt="testing">
 	</article>
 
