Finalized nav menu bar area

--- a/dev/index.html
+++ b/dev/index.html
@@ -84,8 +84,36 @@
 				<source media="(min-width: 330px)" srcset="images/logo.png">
 				<img src="images/logo.jpg"/>
 			</picture>
+			<input type="text" placeholder="Search.." id="nav-search">
+			<div class="desktop-icons">
+				<a href="#">
+				<span>	
+				<i class="fa-brands fa-facebook-f fa-xl"></i>
+				</span>
+				<span>
+				<i class="fa-brands fa-facebook-f hover fa-xl"></i>
+				</span>
+				</a>
+				<a href="#">
+				<span>
+					<i class="fa-brands fa-google fa-xl"></i>
+				</span>
+				<span>
+					<i class="fa-brands fa-google hover fa-xl"></i>
+				</span>
+				</a>
+				<a href="#">
+					<span>
+						<i class="fa-brands fa-twitter fa-xl"></i>
+					</span>
+					<span>
+						<i class="fa-brands fa-twitter hover fa-xl"></i>
+					</span>
+					</a>
 			</div>
-			<input type="text" placeholder="Search..">
+
+		</div>
+			
 			<div class="bg-colour">
 			<ul class="nav-menu" id="desktop-header-menu">
 				<li>Home</li>
@@ -93,7 +121,7 @@
 				<li>Reviews</li>
 				<li>Recipes</li>
 				<li>Contact</li>
-
+				<input type="text" placeholder="Search.." id="desktop-nav-search">
 			</ul>
 		</div>
 
