started on sidebar, edited html

--- a/dev/index.html
+++ b/dev/index.html
@@ -72,8 +72,8 @@
 			<figcaption>SIT AMET CONSECTETUR </figcaption>
 		</figure>
 	</div>
-	<aside>
-			<div>
+	<aside class="side-bar">
+			<div class="recipes">
 				<h3>LATEST RECIPES</h3>
 				<img src="images/lamb-tb.jpg" alt="">
 				<p>MET CONSEC TETUR ELIT</p>
@@ -85,7 +85,7 @@
 				<p>FUGIAT EAQUE AORE</p>
 
 			</div>
-			<div>
+			<div class="cuisines">
 				<h3>CUISINES</h3>
 				<ul>
 					<li>American (95)</li>
