finished styling all elements, just need to fix desktop layout

--- a/dev/index.html
+++ b/dev/index.html
@@ -163,7 +163,7 @@
 				<li><img src="images/steak-tb.jpg" alt="">FUGIAT EAQUE AORE</li>
 
 			</ul>
-				<h3>CUISINES</h3>
+				<h3 class="CuisinesH3">CUISINES</h3>
 				<ul class="cuisines">
 					<li>American (95)</li>
 					<li>Cambodian (3)</li>
