Finished body grid and styling, cleaned up scss files, created mixin for body font. Fixed input bar styling

--- a/dev/index.html
+++ b/dev/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Put Web Page Title Here...</title>
+	<title>Hungry? Look in the Mirror and Get Fed Up.</title>
 
 	<!-- *** IMPORTANT *** PUT LINKS TO GOOGLE FONTS HERE -->
 	<!-- Put Google Fonts Here -->
@@ -134,11 +134,12 @@
 	</header>
 
 <main>
+	<div id="main-wrapper">
 	<!-- <h1>Replace Me with Your HTML Code...</h1> -->
 	<!-- main grid -->
 	<div class="grid-section">
 		<figure class="image1" id="image">
-			<img alt="mussels"
+			<img alt="picture of a bowl of mussels"
 				 src="images/mussel.jpg"
 				 srcset="images/mussel.jpg 704w,
 				 		 images/mussel-small.jpg 350w"
@@ -146,18 +147,18 @@
 			<figcaption>LOREM IPSUM DOLOR SIT </figcaption>
 		</figure >
 		<figure class="image2" id="image">
-			<img src="images/salad.jpg" alt="">
+			<img src="images/salad.jpg" alt="picture of a bowl of salad">
 			<figcaption>LOREM IPSUM DOLOR SIT </figcaption>
 		</figure>
 		<figure class="image3" id="image">
-			<img src="images/pancake.jpg" alt="">
+			<img src="images/pancake.jpg" alt="picture of a stack of pancakes with syrup">
 			<figcaption>SIT AMET CONSECTETUR </figcaption>
 		</figure>
 	</div>
 	<aside class="side-bar">
 			<h3>LATEST RECIPES</h3>
 			<ul class="recipes">
-				<li><img src="images/lamb-tb.jpg" alt="">MET CONSECTETUR ELIT</li>
+				<li><img src="images/lamb-tb.jpg" alt="">MET CONSEC TETUR ELIT</li>
 				<li><img src="images/breakfast-tb.jpg" alt="">ARCHI TECTO DOLORES</li>
 				<li><img src="images/calamari-tb.jpg" alt="">MEXPE DITA CIATIS</li>
 				<li><img src="images/steak-tb.jpg" alt="">FUGIAT EAQUE AORE</li>
@@ -185,35 +186,37 @@
 				</ul>
 		
 		</aside>
-	<article class="articles">
-		<h2>LOREM IPSUM DOLOR SIT AMET</h2>
-		<p class="credit">Posted by Mike Lee on Sunday, Augujst 25, 2013</p>
-		<img src="images/pasta.jpg" alt="">
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-		<button>
-			<p class="btn-p">READ MORE...</p>
-		</button>
-	</article>
+	<div>	
+		<article class="articles">
+			<h2>LOREM IPSUM DOLOR SIT AMET</h2>
+			<p class="credit">Posted by Mike Lee on Sunday, Augujst 25, 2013</p>
+			<img src="images/pasta.jpg" alt="picture of a bowl of pasta with shrimp">
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+			<button>
+				<p class="btn-p">READ MORE...</p>
+			</button>
+		</article>
 
-	<article class="articles">
-		<h2>VEL, EAQUE QUISQUAM SIT AMET</h2>
-		<p class="credit">Posted by Mike Lee on Sunday, Augujst 25, 2013</p>
-		<img src="images/ramen.jpg" alt="">
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-		<button>
-			<p class="btn-p">READ MORE...</p>
-		</button>
-	</article>
+		<article class="articles">
+			<h2>VEL, EAQUE QUISQUAM SIT AMET</h2>
+			<p class="credit">Posted by Mike Lee on Sunday, Augujst 25, 2013</p>
+			<img src="images/ramen.jpg" alt="picture of a bowl of ramen">
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+			<button>
+				<p class="btn-p">READ MORE...</p>
+			</button>
+		</article>
 
-	<article class="older-btn">
-		<img src="images/previous-btn.png" alt="testing">
-	</article>
+		<article class="older-btn">
+			<img src="images/previous-btn.png" alt="older posts button">
+		</article>
+	</div>
 
-	
+	</div>
 
 </main>
 <footer>
-	<p>&COPY; 2022 Adam & Sami. For non-educational purposes only. Image credits to someone else.</p>
+	<p>&COPY; 2022 Adam & Sami. For educational purposes only. Image credits to someone else.</p>
 </footer>
 </div>
 
